ambientmusic: Trigger an ambient pulse when a new Now Playing track is detected
Also add a check to prevent doze pulses from being triggered more than once for the same song

Signed-off-by: Jayant-Deshmukh <jayantdeshmuk008@gmail.com>

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -349,9 +349,10 @@
     <protected-broadcast android:name="com.android.settingslib.action.UNREGISTER_SLICE_RECEIVER" />
     <protected-broadcast android:name="com.android.settings.flashlight.action.FLASHLIGHT_CHANGED" />
     
-        <!-- Now Playing -->
+    <!-- Now Playing -->
     <permission android:name="com.google.android.ambientindication.permission.AMBIENT_INDICATION" android:protectionLevel="signature|system"/>
     <uses-permission android:name="com.google.android.ambientindication.permission.AMBIENT_INDICATION"/>
+    <protected-broadcast android:name="com.android.systemui.doze.pulse" />
 
     <!-- DataSwitch tile -->
     <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" />
